Update dependencies, improve project structure, and enhance functionality
- Added 'dist' to .gitignore to exclude build artifacts.
- Updated dependencies in bun.lock and package-lock.json for various packages, including @nestjs and typescript-related packages.
- Refactored import statements in several files to use named imports instead of type imports for better clarity.
- Improved CreateDeckDto and CreateProjectDto with validation and transformation for optional fields.
- Enhanced slide components to support dynamic font loading and improved styling.
- Removed unused middleware file from the web app.
- Updated project scripts in package.json for better build and development processes.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,16 +1,4 @@
 {
-  "name": "api",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "nest build",
-    "dev": "nest start --watch",
-    "start": "nest start",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write \"**/*.{ts,json,md}\"",
-    "format:check": "prettier --check \"**/*.{ts,json,md}\""
-  },
   "dependencies": {
     "@nestjs/common": "11.1.11",
     "@nestjs/config": "4.0.2",
@@ -40,5 +28,17 @@
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.9.3"
-  }
+  },
+  "name": "api",
+  "private": true,
+  "scripts": {
+    "build": "nest build",
+    "dev": "nest start --watch",
+    "format": "prettier --write \"**/*.{ts,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,json,md}\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "start": "nest start",
+    "start:prod": "node dist/main"
+  },
+  "version": "0.1.0"
 }
