--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --port 3000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint .",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,css}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,css}\""
-  },
   "dependencies": {
     "@clerk/nextjs": "6.36.5",
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/sortable": "8.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "axios": "1.13.2",
     "clsx": "2.1.1",
     "lucide-react": "0.562.0",
@@ -31,5 +23,16 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "4.1.18",
     "typescript": "5.9.3"
-  }
+  },
+  "name": "web",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev --port 3000",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,css}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,css}\"",
+    "lint": "eslint .",
+    "start": "next start"
+  },
+  "version": "0.1.0"
 }
