Enhance project configuration and update dependencies
- Updated biome.json to include accessibility rules and organize imports settings.
- Added new dependencies for drag-and-drop functionality in bun.lock.
- Renamed project in package.json from 'pitch-deck-platform' to 'deckflow.com' and added a description.
- Improved Next.js configuration for SCSS support and turbopack integration.
- Removed outdated command files to streamline project structure.

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,14 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": {
+          "level": "on"
+        }
+      }
+    }
+  },
   "files": {
     "includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json", "**/*.mjs"]
   },
@@ -22,12 +31,15 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
+      "a11y": {
+        "noLabelWithoutControl": "off",
+        "noStaticElementInteractions": "off",
+        "noSvgWithoutTitle": "off",
+        "useButtonType": "off",
+        "useKeyWithClickEvents": "off"
+      },
       "complexity": {
         "noForEach": "off"
-      },
-      "style": {
-        "noNonNullAssertion": "off"
       },
       "correctness": {
         "noUnusedFunctionParameters": "off",
@@ -36,24 +48,12 @@
       "performance": {
         "noImgElement": "off"
       },
-      "a11y": {
-        "noLabelWithoutControl": "off",
-        "noSvgWithoutTitle": "off",
-        "noStaticElementInteractions": "off",
-        "useKeyWithClickEvents": "off",
-        "useButtonType": "off"
+      "recommended": true,
+      "style": {
+        "noNonNullAssertion": "off"
       },
       "suspicious": {
         "noArrayIndexKey": "off"
-      }
-    }
-  },
-  "assist": {
-    "actions": {
-      "source": {
-        "organizeImports": {
-          "level": "on"
-        }
       }
     }
   }
