--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,9 +20,6 @@
     "@nestjs/schematics": "11.0.9",
     "@types/express": "5.0.6",
     "@types/node": "25.0.3",
-    "@typescript-eslint/eslint-plugin": "8.51.0",
-    "@typescript-eslint/parser": "8.51.0",
-    "eslint": "9.39.2",
     "source-map-support": "0.5.21",
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
@@ -34,9 +31,9 @@
   "scripts": {
     "build": "nest build",
     "dev": "nest start --watch",
-    "format": "prettier --write \"**/*.{ts,json,md}\"",
-    "format:check": "prettier --check \"**/*.{ts,json,md}\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write .",
     "start": "nest start",
     "start:prod": "node dist/main"
   },
