--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,8 +19,7 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/reveal.js": "5.2.2",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.1",
+    "sass": "1.97.1",
     "tailwindcss": "4.1.18",
     "typescript": "5.9.3"
   },
@@ -29,9 +28,11 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --port 3000",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,css}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,css}\"",
-    "lint": "eslint .",
+    "format": "biome format --write .",
+    "format:check": "biome format --check .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "pre:install": "bun update --latest --recursive && bun install",
     "start": "next start"
   },
   "version": "0.1.0"
