--- a/biome.json
+++ b/biome.json
@@ -3,9 +3,7 @@
   "assist": {
     "actions": {
       "source": {
-        "organizeImports": {
-          "level": "on"
-        }
+        "organizeImports": "on"
       }
     }
   },
