Update CLAUDE.md and package.json files for DeckFlow project
- Expanded CLAUDE.md to include project overview, tech stack, project structure, commands, and key features.
- Added new scripts for testing and coverage in package.json for both API and web applications.
- Updated dependencies in package.json for API and web applications to include testing libraries and tools.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
     "pre:install": "bun update --latest --recursive && bun install",
+    "prepare": "husky",
     "prepare:deploy": "bun install",
-    "start": "bun --filter '*' run start"
+    "start": "bun --filter '*' run start",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "version": "0.1.0",
   "workspaces": [
