--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,22 +20,28 @@
     "@nestjs/schematics": "11.0.9",
     "@types/express": "5.0.6",
     "@types/node": "25.0.3",
+    "@types/supertest": "6.0.3",
+    "@vitest/coverage-v8": "4.0.16",
     "source-map-support": "0.5.21",
+    "supertest": "7.1.0",
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "4.0.16"
   },
   "name": "api",
   "private": true,
   "scripts": {
     "build": "nest build",
     "dev": "nest start --watch",
+    "format": "biome format --write .",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "format": "biome format --write .",
     "start": "nest start",
-    "start:prod": "node dist/main"
+    "start:prod": "node dist/main",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "version": "0.1.0"
 }
