--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,26 +14,37 @@
     "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "1.57.0",
     "@tailwindcss/postcss": "4.1.18",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.1",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/reveal.js": "5.2.2",
+    "@vitejs/plugin-react": "4.5.2",
+    "@vitest/coverage-v8": "4.0.16",
+    "jsdom": "26.1.0",
     "sass": "1.97.1",
     "tailwindcss": "4.1.18",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "4.0.16"
   },
   "name": "web",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev --port 3000",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
     "format": "biome format --write .",
     "format:check": "biome format --check .",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "pre:install": "bun update --latest --recursive && bun install",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "version": "0.1.0"
 }
