Update dependencies and improve project configuration
- Updated @biomejs/biome version to 2.3.11 in biome.json and package.json.
- Enhanced build scripts in package.json for better filtering and organization.
- Added new testing dependencies in apps/api/package.json for improved testing capabilities.
- Updated tsconfig.json to include vitest types and exclude build artifacts from compilation.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@biomejs/biome": "2.3.10",
+    "@biomejs/biome": "2.3.11",
     "husky": "9.1.7",
     "lint-staged": "16.2.7"
   },
@@ -13,10 +13,12 @@
   "description": "Pitch deck creation platform with AI assistance",
   "private": true,
   "scripts": {
-    "build": "bun --filter '*' run build",
+    "build": "bun run --filter '*' build",
+    "build:api": "bun run --filter api build",
+    "build:web": "bun run --filter web build",
     "check": "biome check .",
     "check:fix": "biome check --write .",
-    "dev": "bun run --filter ./apps/api dev & bun run --filter ./apps/web dev",
+    "dev": "bun run --filter '*' dev",
     "dev:api": "bun run --filter api dev",
     "dev:web": "bun run --filter web dev",
     "format": "biome format --write .",
@@ -26,7 +28,7 @@
     "pre:install": "bun update --latest --recursive && bun install",
     "prepare": "husky",
     "prepare:deploy": "bun install",
-    "start": "bun --filter '*' run start",
+    "start": "bun run --filter '*' start",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest --watch"
