--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nestjs/cli": "11.0.14",
     "@nestjs/schematics": "11.0.9",
+    "@nestjs/testing": "^11.1.11",
     "@types/express": "5.0.6",
     "@types/node": "25.0.3",
     "@types/supertest": "6.0.3",
